--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -4,34 +4,39 @@
 <div class="py-6">
   <div class="mx-auto sm:px-6 lg:px-8">
     <div class="grid grid-cols-[250px_1fr] gap-6">
-      <div class="bg-white shadow-sm rounded-lg h-fit">
-        <nav class="p-4 space-y-2">
-          <%= link_to site_documents_path(@site, status: ''), class: "flex items-center justify-between p-2 text-gray-700 hover:bg-gray-50 rounded #{params[:status].blank? ? 'bg-gray-100' : ''}" do %>
-            <div class="flex items-center">
-              <i class="fas fa-inbox w-5"></i>
-              <span class="ml-2">Backlog</span>
-            </div>
-            <span class="bg-gray-100 text-gray-600 py-0.5 px-2 rounded-full text-xs"><%= @site.documents.by_status('').count %></span>
-          <% end %>
-          <%= link_to site_documents_path(@site, status: 'in_review'), class: "flex items-center justify-between p-2 text-gray-700 hover:bg-gray-50 rounded #{params[:status] == 'in_review' ? 'bg-gray-100' : ''}" do %>
-            <div class="flex items-center">
-              <i class="fas fa-clock w-5"></i>
-              <span class="ml-2">In Review</span>
-            </div>
-            <span class="bg-gray-100 text-gray-600 py-0.5 px-2 rounded-full text-xs"><%= @site.documents.by_status('in_review').count %></span>
-          <% end %>
-          <%= link_to site_documents_path(@site, status: 'done'), class: "flex items-center justify-between p-2 text-gray-700 hover:bg-gray-50 rounded #{params[:status] == 'done' ? 'bg-gray-100' : ''}" do %>
-            <div class="flex items-center">
-              <i class="fas fa-check w-5"></i>
-              <span class="ml-2">Done</span>
-            </div>
-            <span class="bg-gray-100 text-gray-600 py-0.5 px-2 rounded-full text-xs"><%= @site.documents.by_status('done').count %></span>
-          <% end %>
-        </nav>
-      </div>
-      <div class="px-4 sm:px-0">
+      <div class="space-y-6">
+        <div class="bg-white shadow-sm rounded-lg h-fit">
+          <nav class="p-4 space-y-2">
+            <%= link_to site_documents_path(@site, status: ''), class: "flex items-center justify-between p-2 text-gray-700 hover:bg-gray-50 rounded #{params[:status].blank? ? 'bg-gray-100' : ''}" do %>
+              <div class="flex items-center">
+                <i class="fas fa-inbox w-5"></i>
+                <span class="ml-2">Backlog</span>
+              </div>
+              <span class="bg-gray-100 text-gray-600 py-0.5 px-2 rounded-full text-xs"><%= short_number @site.documents.by_status('').count %></span>
+            <% end %>
+            <%= link_to site_documents_path(@site, status: 'in_review'), class: "flex items-center justify-between p-2 text-gray-700 hover:bg-gray-50 rounded #{params[:status] == 'in_review' ? 'bg-gray-100' : ''}" do %>
+              <div class="flex items-center">
+                <i class="fas fa-clock w-5"></i>
+                <span class="ml-2">In Review</span>
+              </div>
+              <span class="bg-gray-100 text-gray-600 py-0.5 px-2 rounded-full text-xs"><%= @site.documents.by_status('in_review').count %></span>
+            <% end %>
+            <%= link_to site_documents_path(@site, status: 'done'), class: "flex items-center justify-between p-2 text-gray-700 hover:bg-gray-50 rounded #{params[:status] == 'done' ? 'bg-gray-100' : ''}" do %>
+              <div class="flex items-center">
+                <i class="fas fa-check w-5"></i>
+                <span class="ml-2">Done</span>
+              </div>
+              <span class="bg-gray-100 text-gray-600 py-0.5 px-2 rounded-full text-xs"><%= @site.documents.by_status('done').count %></span>
+            <% end %>
+          </nav>
+        </div>
         <%= render partial: "shared/filter", locals: { site: @site, documents: @documents, document_categories: @document_categories, total_documents: @total_documents } %>
-        <div class="bg-white shadow-sm rounded-lg overflow-visible">
+      </div>
+      <div class="px-4 sm:px-0 space-y-0">
+        <div class="bg-white shadow-sm rounded-t-lg px-6 py-4 border-b">
+          <h1 class="text-lg font-medium"><%= @site.location %>: <%= @site.name %></h1>
+        </div>
+        <div class="bg-white shadow-sm rounded-b-lg overflow-visible">
           <table class="min-w-full divide-y divide-gray-200 table-zebra">
             <thead class="bg-gray-50">
               <tr>
