--- a/app/views/shared/_filter.html.erb
+++ b/app/views/shared/_filter.html.erb
@@ -1,7 +1,7 @@
 <div class="bg-white shadow-sm rounded-lg" data-controller="filter">
-  <div class="px-2 py-3 rounded-t-lg flex justify-end">
-    <button class="btn btn-sm btn-ghost text-gray-600" data-action="filter#toggle">
-      Filter Results
+  <div class="px-2 py-3 rounded-t-lg">
+    <button class="btn btn-sm btn-ghost text-gray-600 w-full flex justify-between items-center" data-action="filter#toggle">
+      <span>Filter Results</span>
       <i class="fas fa-chevron-down"></i>
     </button>
   </div>
