--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -68,6 +68,16 @@
               </tr>
             </thead>
             <tbody class="bg-white divide-y divide-gray-200">
+              <% if @documents.empty? %>
+                <tr>
+                  <td colspan="7" class="px-3 py-8">
+                    <div class="flex items-center justify-center text-gray-500">
+                      <i class="fas fa-folder-open mr-2"></i>
+                      <span>No documents found</span>
+                    </div>
+                  </td>
+                </tr>
+              <% end %>
               <% @documents.each do |document| %>
                 <tr>
                   <td class="px-4 py-4 whitespace-nowrap text-lg text-gray-500 text-center w-12">
