--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -133,7 +133,7 @@
                           class="hidden w-[125%] min-h-[6em] p-2 border border-gray-300 rounded-md shadow-sm focus:border-primary-500 focus:ring-primary-500"
                         ><%= document.notes %></textarea>
                       </td>
-                      <td class="px-3 py-4 text-sm text-gray-500 relative" data-controller="status" data-document-id="<%= document.id %>">
+                      <td class="px-3 py-4 text-sm text-gray-500 relative flex justify-center items-center h-[60px]" data-controller="status" data-document-id="<%= document.id %>">
                         <button class="text-gray-500 hover:text-gray-700 z-[50]" data-action="status#toggleMenu">
                           <i class="fas fa-ellipsis-v"></i>
                         </button>
